tests/snapshots/ui_disk__on_disk_21.snap
---
source: tests/ui_disk.rs
expression: "h.screen(100, 34)"
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              on disk
  ● ·   ·  ● ○ ○  · ●   ○  ○·    ● ·  ○ ·  ·    ●· ·●·● · ○ ·  ·○  · ·○ ·  ·  ┊ ● main.go  ○ src/
                                                                                ▲          − 1× +

▶on disk  +2~1−1      │   ..                                   │ main.go · on disk       ⇥ content
   ┄ 2 unchanged ┄    │ ▸ api/                                 │ changed since Oct 02 12:21
 Sep 27 08:52 ~1      │ ▸ models/                           +1 │
   ┄ 2 unchanged ┄    │ ◇ config.go                   96 B     │   1  package main
 Sep 20 20:35 ~1      │ ◇ main.go                    124 B  ~  │   2
   ┄ 2 unchanged ┄    │ ◇ scratch.go                  49 B  +  │   3  func main() {
 Sep 13 20:51 ~2      │ ◇ server.go                   42 B     │   4    run()
   ┄ 1 unchanged ┄    │ ◇ util.go                    104 B  −  │   5  }
 Sep 09 19:23 ~1      │                                        │   6  // flags
   ┄ 1 unchanged ┄    │                                        │   7  // middleware
 Sep 06 18:03 +1~3−1  │                                        │   8  // feature flag
   ┄ 2 unchanged ┄    │                                        │   9  // signals
 Sep 02 20:16 ~1      │                                        │  10  // serve
   ┄ 2 unchanged ┄    │                                        │  11  // shutdown
 Aug 22 11:59 ~2−1    │                                        │  12+ // unsaved edit
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Jul 14 09:00 +7      │                                        │
                      │   2 deleted · . to show                │
 NOR  on disk  vs Oct 02  src/ +2 ~1 −1                                   Oct 02 13:21  4/7  ? help
