tests/snapshots/ui_disk__on_disk_diff.snap
---
source: tests/ui_disk.rs
expression: "h.screen(100, 34)"
---
 restoric  main.go  Sep 09 19:23  →  on disk                                                  +1 −0
 what changed on disk since this version
 ┄┄ around line 9 ┄┄
    9    9    // signals
   10   10    // serve
   11   11    // shutdown
        12  + // unsaved edit


























 DIFF  vs previous (p)  ]c [c changes · H L versions                                    1/5  ? help
