tests/snapshots/ui_disk__on_disk_hide_new.snap
---
source: tests/ui_disk.rs
expression: s
---
 restoric  ~/dev/project/src
  Jul 2026        Aug                         Sep                              on disk
  ● ·   ·  ○ ○ ●  · ●   ○  ○·    ○ ·  ○ ·  ·    ○· ·●·○ · ○ ·  ·○  · ·○ ·  ·  ┊ ○ api/  ○ src/
                                                                                ▲          − 1× +

▶on disk  +3~1−1      │   ..                                   │ api/
   ┄ 2 unchanged ┄    │ ▸ api/                                 │
 Sep 27 08:52 ~1      │ ▸ models/                           +1 │ ◇ handlers.go
   ┄ 2 unchanged ┄    │ ◇ config.go                   96 B     │ ◇ middleware.go
 Sep 20 20:35 ~1      │ ◇ main.go                    124 B  ~  │ ◇ routes.go
   ┄ 2 unchanged ┄    │ ◇ server.go                   42 B     │
 Sep 13 20:51 ~2      │ ◇ util.go                    104 B  −  │
   ┄ 1 unchanged ┄    │                                        │
 Sep 09 19:23 ~1      │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Sep 06 18:03 +1~3−1  │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Sep 02 20:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Aug 22 11:59 ~2−1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 17 16:04 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Aug 10 15:44 ~1      │                                        │
 Aug 07 08:15 +1      │                                        │
 Aug 03 16:19 +1~1    │                                        │
   ┄ 1 unchanged ┄    │                                        │
 Jul 28 15:59 ~1      │                                        │
 Jul 26 11:57 ~1      │                                        │
 Jul 24 12:16 ~1      │                                        │
   ┄ 2 unchanged ┄    │                                        │
 Jul 14 09:00 +7      │   2 not backed up · zn to show         │
                      │   2 deleted · . to show                │
 NOR  on disk  vs Oct 02  src/ +3 ~1 −1                                                 1/6  ? help
